# mdp

./: .clang-format  .gitignore  .gitmodules  Broker.cpp  Broker.h  BrokerTasks.h  CMakeLists.txt  Client.cpp  Client.h  Dockerfile  Ensure.h  Except.h  MDP.h  Makefile  Makefile.broker  Makefile.client  Makefile.defs  Makefile.echo_worker  Makefile.rules  Makefile.worker  MutualHeartbeatMonitor.cpp  README.md  Trace.h  Worker.cpp  Worker.h  WorkerPool.h  WorkerTask.cpp  WorkerTask.h  ZMQBrokerContext.cpp  ZMQBrokerContext.h  ZMQClientContext.cpp  ZMQClientContext.h  ZMQIdentity.cpp  ZMQIdentity.h  ZMQWorkerContext.cpp  ZMQWorkerContext.h  build.sh  build_dbg.sh  build_rel.sh  client.cpp  (+5 more)
.github/workflows/: build.yml  c-cpp.yml
apps/: CMakeLists.txt
apps/broker/: CMakeLists.txt  Makefile
apps/broker/src/: broker.cpp
apps/client/: CMakeLists.txt  Makefile
apps/client/src/: client.cpp
apps/echo_worker/: CMakeLists.txt  Makefile
apps/echo_worker/src/: worker.cpp
broker/: CMakeLists.txt  Makefile
broker/include/mdp/: Broker.h  BrokerTasks.h  WorkerPool.h  ZMQBrokerContext.h
broker/src/: Broker.cpp  ZMQBrokerContext.cpp
client/: CMakeLists.txt  Makefile
client/include/mdp/: Client.h  ZMQClientContext.h
client/src/: Client.cpp  ZMQClientContext.cpp
common/: CMakeLists.txt  Makefile
common/include/mdp/: Except.h  MDP.h  MutualHeartbeatMonitor.h  ZMQIdentity.h  utils.h
common/src/: MutualHeartbeatMonitor.cpp  ZMQIdentity.cpp  utils.cpp
diagrams/: component.puml  diagrams.plantuml  sequence_heartbeat.puml  sequence_request.puml
docker/: Dockerfile  docker-compose.yml  make_env.sh
make_utils/: Makefile.a_rules  Makefile.defs  Makefile.rules
tests/: CMakeLists.txt
tests/UTs/common/: CMakeLists.txt  Makefile
tests/UTs/common/src/: MutualHeartbeatMonitor_tests.cpp  ZMQIdentity_tests.cpp  utils_tests.cpp
worker/: CMakeLists.txt  Makefile
worker/include/mdp/: Worker.h  WorkerTask.h  ZMQWorkerContext.h
worker/src/: Worker.cpp  WorkerTask.cpp  ZMQWorkerContext.cpp
